# rag-platform

./: .env.example  .gitignore  Makefile  README.md  README.zh  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  bm25.py  config.py  db.py  generator.py  lexicon.py  main.py  models.py  retriever.py  schemas.py  splitter.py
app/embed/: __init__.py  base.py  core.py  ollama_backend.py  st_backend.py
data/: lexicon.json
docs/: ARCHITECTURE.md
frontend/: eslint.config.js  index.html  package.json  vite.config.js
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: ChatPanel.vue  IngestPanel.vue  SearchPanel.vue
tests/: conftest.py  test_integration.py  test_unit.py
